# mini_pay

./: .gitignore  README.md  SUBMISSION.md  package-lock.json  package.json  prd.md
contracts/: Cargo.toml  README.md
contracts/base/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
contracts/wallet_factory/contracts/hello-world/: Cargo.toml
contracts/wallet_factory/contracts/hello-world/src/: lib.rs  test.rs
contracts/wallet_factory/contracts/hello-world/test_snapshots/test/: test_duplicate_nullifier_rejected.1.json  test_initialize.1.json  test_nonexistent_nullifier.1.json  test_register_wallet.1.json  test_update_wallet.1.json
contracts/zk_verifier/contracts/hello-world/: Cargo.toml
contracts/zk_verifier/contracts/hello-world/src/: lib.rs  test.rs
contracts/zk_verifier/contracts/hello-world/test_snapshots/test/: test_initialize.1.json  test_replay_prevention.1.json  test_set_verification_key.1.json  test_verify_and_store.1.json  test_zero_proof_rejected.1.json
playwright-report/: index.html
public/: architecture_proposal.md.resolved  blind_spots.md.resolved  mentor_response.md.resolved  onramp_integration.md.resolved  walkthrough.md.resolved
scripts/: initialize-contracts.ts  setup-usdc-trustline.js  supabase_schema.sql  test-aadhaar-contracts.js  test-base-recovery.js  test-real-proof.js  verify-blockchain.ts
src/app/: layout.tsx  page.tsx
src/components/: AadhaarRecovery.tsx  AadhaarVerification.tsx  BridgeModal.tsx  MainWallet.tsx  (+11 more)
static/: Dockerfile  backnd.sh  test.css  test.html
tests/: home.spec.ts
(+15 files in other folders)
