[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
publish = false
description = "Groth16 ZK proof verifier for Anon-Aadhaar on Stellar"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
